# pre-commit-check-name

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: pre-commit.yml
pre_commit_hooks/: __init__.py  check_name_regex.py
tests/: test_check_name_regex.py
