[metadata]
name = pre-commit-check-name
version = 0.1.0
description = File name checking utilities for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hlecco/pre-commit-check-name
author = Henrique Lecco
author_email = me@lecco.dev
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    check-name-regex = pre_commit_hooks.check_name_regex:main
